Re-architect API routes for quiz creation to simplify and add creation of new users in beanbag db
